--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "svgo": "^2.8.0",
     "three": "^0.138.3",
     "tone": "^14.7.77",
     "web-vitals": "^2.1.4"
