--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "my-app",
+  "name": "gorogoro",
+  "homepage": "http://gorogoroil.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
